fixed images in article (post and comments) being squished

--- a/public/stylesheets/less/rp-article.less
+++ b/public/stylesheets/less/rp-article.less
@@ -243,10 +243,10 @@ md-dialog .rp-article-thread-progress-wrapper {
 	Media Styles
  */
 .rp-article-media-max-size {
-    max-height: 75vh;
+    // max-height: 75vh;
     max-width: 75vh;
     @media (max-width: @layout-sm) {
-        max-height: 50vh;
+        // max-height: 50vh;
         max-width: 50vh;
     }
     margin-left: auto;
